# snake

./: Cargo.toml  i686.json  index.html  linker.ld  run  start.asm
src/: game.rs  lib.rs  print.rs
src/screens/: instructions.txt  mod.rs  one.txt  paused.txt  three.txt  tie.txt  title.txt  two.txt  win.txt  zero.txt
