[package]
name = "snake"
version = "0.1.0"
authors = ["Ram Kaniyur <quadrupleslap@gmail.com>"]
edition = "2018"

[lib]
crate_type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
lazy_static = { version = "1.3", features = ["spin_no_std"] }
pc-keyboard = "0.5"
pic8259_simple = "0.1"
spin = "0.5"
x86 = "0.18"
